[gd_scene load_steps=16 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://HPBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/Player/player_full.png" type="Texture" id=3]
[ext_resource path="res://RotateObject.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 10.83
height = 15.654

[sub_resource type="RectangleShape2D" id=2]
resource_local_to_scene = true
extents = Vector2( 8.34481, 14.9438 )

[sub_resource type="RectangleShape2D" id=3]
resource_local_to_scene = true
extents = Vector2( 8.13679, 15.4709 )

[sub_resource type="RectangleShape2D" id=4]
resource_local_to_scene = true
extents = Vector2( 25.9946, 6.45846 )

[sub_resource type="Animation" id=5]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/hitbox:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=6]
resource_name = "player_attack2"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 5, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/attack2_hitbox:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/attack2_hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=7]
resource_name = "player_attack3"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 11, 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/attack3_hitbox:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/attack3_hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=8]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 45, 47 ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 50, 53 ]
}

[sub_resource type="Animation" id=10]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 54, 59 ]
}

[sub_resource type="Animation" id=11]
resource_name = "player_sliding"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 60, 61 ]
}

[node name="Player" type="KinematicBody2D"]
z_index = 10
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HPBar" parent="." instance=ExtResource( 2 )]
margin_top = -40.0
margin_bottom = -35.0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
vframes = 3
hframes = 23
frame = 8

[node name="hitbox" type="Area2D" parent="Sprite"]
position = Vector2( 1.71288, 0.79056 )
monitoring = false
collision_layer = 32
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/hitbox"]
position = Vector2( 13.7382, -2.98656 )
shape = SubResource( 2 )

[node name="attack2_hitbox" type="Area2D" parent="Sprite"]
monitoring = false
collision_layer = 32
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/attack2_hitbox"]
position = Vector2( 14.6869, 2.83724 )
shape = SubResource( 3 )
disabled = true

[node name="attack3_hitbox" type="Area2D" parent="Sprite"]
monitoring = false
collision_layer = 32
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/attack3_hitbox"]
position = Vector2( 2.50349, 11.182 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/player_attack = SubResource( 5 )
anims/player_attack2 = SubResource( 6 )
anims/player_attack3 = SubResource( 7 )
anims/player_idle = SubResource( 8 )
anims/player_jump = SubResource( 9 )
anims/player_run = SubResource( 10 )
anims/player_sliding = SubResource( 11 )

[node name="RotateObject" parent="." instance=ExtResource( 4 )]
visible = false
v_radius = 10

[node name="DamageTween" type="Tween" parent="."]
[connection signal="area_entered" from="Sprite/hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="Sprite/hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="area_entered" from="Sprite/attack2_hitbox" to="." method="_on_attack2_hitbox_area_entered"]
[connection signal="body_entered" from="Sprite/attack2_hitbox" to="." method="_on_attack2_hitbox_body_entered"]
[connection signal="area_entered" from="Sprite/attack3_hitbox" to="." method="_on_attack3_hitbox_area_entered"]
[connection signal="body_entered" from="Sprite/attack3_hitbox" to="." method="_on_attack3_hitbox_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
